# polito-mlpr

./: .gitignore
Bible/: Bayes_decisions_Model_evaluation.py  linear_projection_classifier.py  load_split.py  mean_covariance.py  pyproject.toml
Bible/GMM/: GMM.py
Bible/LDA/: LDA.py
Bible/Laboratory/: lab_03.ipynb  lab_05.ipynb  lab_06.ipynb  lab_08.ipynb  lab_09.ipynb  lab_11.ipynb  lab_12.ipynb  lab_13.ipynb
Bible/LogisticRegression/: LR.py
Bible/MVG/: MVG.py  logpdf_loglikelihood_GAU.py
Bible/PCA/: PCA.py
Bible/SVM/: SVM_linear.py  SVM_nonlinear.py
Lab1/: ese1.py  ese2.py  ese3.py  ese4.py  ese5.py  ese6.py  ese7.py  ese8.py  pyproject.toml
Lab2/: main.py  project.py  pyproject.toml  sol.py
Lab3/: Optimize_threshold.py  PCA-LDA_for_classification.py  Project.py  main.py  pyproject.toml  solLDA.py
Lab3_copy/: iris_dataset_PCA_LDA.ipynb  pyproject.toml
Lab5/: main.py  pyproject.toml
Lab6/: chat.py  main.py  project.py  pyproject.toml
Lab6/Solution/: sol.py
Lab7/: pyproject.toml
Lab8/: main.py  pyproject.toml
Lab8/sol/: sol.py
Theory/: .gitignore  MLPR.aux  MLPR.fdb_latexmk  MLPR.fls  MLPR.out  MLPR.tex  MLPR.toc
Theory/BayesDecisionsAndModelEvaluation/: BayesDecisionsAndModelEvaluation.tex
Theory/DimensionalityReduction/: DimensionalityReduction.tex
Theory/GaussianMixtureModels/: GaussianMixtureModels.tex
Theory/GenerativeGaussianModels/: GenerativeGaussianModels.tex
Theory/GenerativeMultinomialModels/: GenerativeMultinomialModels.tex
Theory/Introduction/: Introduction.tex
Theory/LogisticRegression/: LogisticRegression.tex
Theory/ProbabilityDensityEstimation/: ProbabilityDensityEstimation.tex
Theory/ScoreCalibrationAndFusion/: ScoreCalibrationAndFusion.tex
Theory/_exam/: 01_PCA.tex  02_LDA.tex  03_PCA_vs_LDA.tex  04_GGM.tex  MLPR_exam.tex
Theory/_exam/raw/01_PCA/: pca.md
Theory/_exam/raw/03_GGM/: GGM.md
Theory/_utils/: CONTEXT.txt  notazioni.md  prompt.txt
